--- a/www/css/result.css
+++ b/www/css/result.css
@@ -34,7 +34,7 @@ body {
     padding:0px;
     text-transform:uppercase;
     width:100%;
-    background-image: url('../img/waltercalc_mobile.png');
+    background-image: url('../img/waltercalc_mobile2.png');
 }
 
 /* Portrait layout (default) */
